@@ -1,3 +1,7 @@
+# 0,1,0,20210216
+	Select by Length and Segment Count added to Select Menu in Curve Edit mode.
+	'W','E','R' issue with snap fixed.
+
 # 0,1,0,20210207
 	Multi target shapekey (driving multiple shapekeys automatically) added under shapekey panel.
 	Very simple tool for quick rename objects data name same as object name (for now search 'Data Rename' operator).
